basic styles and script

--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html>
+<link rel="stylesheet" href="style.css">
+
 <head>
-    <title>Nate's Page</title>
-    <link rel="stylesheet" href="style.css">
-    <script src="script.js"></script>
+  <title>Nate's Page</title>
 </head>
+
 <body>
-    <h1>Welcome to Nate's Page</h1>
-    <button id="start-button" class="button">Start Game</button>
+  <div>Welcome to Nate's Page</div>
+  <button id="start-button" class="button">Start Game</button>
 </body>
+<script src="script.js"></script>
+
 </html>
