adding question controller

--- a/index.html
+++ b/index.html
@@ -68,5 +68,6 @@
 <script src="script.js"></script>
 <script src="models/game.js"></script>
 <script src="models/missileController.js"></script>
+<script src="models/questionController.js"></script>
 
 </html>
