almost there, can't quite get the questions to get the correct answers yet

--- a/index.html
+++ b/index.html
@@ -62,5 +62,6 @@
 <script src="models/game.js"></script>
 <script src="models/missileController.js"></script>
 <script src="models/questionController.js"></script>
+<script src="models/answerController.js"></script>
 
 </html>
