click controller works

--- a/index.html
+++ b/index.html
@@ -58,10 +58,12 @@
 
 </body>
 <script src="utils.js"></script>
-<script src="script.js"></script>
-<script src="models/game.js"></script>
-<script src="models/missileController.js"></script>
-<script src="models/questionController.js"></script>
-<script src="models/answerController.js"></script>
+<script src="main.js"></script>
+<script src="controllers/game.js"></script>
+<script src="controllers/missileController.js"></script>
+<script src="controllers/questionController.js"></script>
+<script src="controllers/answerController.js"></script>
+<script src="controllers/clickController.js"></script>
+<script src="controllers/explosionController.js"></script>
 
 </html>
