added time controller

--- a/index.html
+++ b/index.html
@@ -65,5 +65,6 @@
 <script src="controllers/answerController.js"></script>
 <script src="controllers/clickController.js"></script>
 <script src="controllers/explosionController.js"></script>
+<script src="controllers/timeController.js"></script>
 
 </html>
