added score controller stub

--- a/index.html
+++ b/index.html
@@ -66,5 +66,6 @@
 <script src="controllers/clickController.js"></script>
 <script src="controllers/explosionController.js"></script>
 <script src="controllers/timeController.js"></script>
+<script src="controllers/scoreController.js"></script>
 
 </html>
