game end, also starting to draft game modes

--- a/index.html
+++ b/index.html
@@ -29,6 +29,13 @@
     </div>
 
     <div>
+      <input type="radio" id="speed-mode" name="mode" value="speed" checked>
+      <label for="speed-mode">Speed Mode</label>
+      <input type="radio" id="swarm-mode" name="mode" value="swarm">
+      <label for="swarm-mode">Swarm Mode</label>
+    </div>
+
+    <div>
       <label for="term-1-min">Term 1 Min:</label>
       <input type="number" min="0" max="50" id="term-1-min" name="term-1-min" value="1">
       <label for="term-1-max">Term 1 Max:</label>
