--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
 
     <div>
       <input type="radio" id="speed-mode" name="mode" value="speed" checked>
-      <label for="speed-mode">Speed Mode</label>
+      <label for="speed-mode" title="A new question generates each time the previous one is answered.">Speed Mode</label>
       <input type="radio" id="swarm-mode" name="mode" value="swarm">
-      <label for="swarm-mode">Swarm Mode</label>
+      <label for="swarm-mode" title="A new question is generated every second.">Swarm Mode</label>
     </div>
 
     <div>
