removed mode controls

--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
       <label for="division">Division</label>
     </div>
 
-    <div>
+    <!-- <div>
       <input type="radio" id="speed-mode" name="mode" value="speed" checked>
       <label for="speed-mode" title="A new question generates each time the previous one is answered.">Speed Mode</label>
       <input type="radio" id="swarm-mode" name="mode" value="swarm">
       <label for="swarm-mode" title="A new question is generated every second.">Swarm Mode</label>
-    </div>
+    </div> -->
 
     <div>
       <label for="term-1-min">Term 1 Min:</label>
