added keyboard controller and radio selectors

--- a/index.html
+++ b/index.html
@@ -28,6 +28,13 @@
       <label for="division">Division</label>
     </div>
 
+    <div>
+      <input type="radio" id="keyboard-mode" name="mode" value="keyboard" checked>
+      <label for="keyboard-mode" title="Use the keyboard to answer questions.">Keyboard Mode</label>
+      <input type="radio" id="mouse-mode" name="mode" value="mouse">
+      <label for="mouse-mode" title="Use the mouse to answer questions.">Mouse Mode</label>
+    </div>
+
     <!-- <div>
       <input type="radio" id="speed-mode" name="mode" value="speed" checked>
       <label for="speed-mode" title="A new question generates each time the previous one is answered.">Speed Mode</label>
@@ -74,5 +81,6 @@
 <script src="controllers/explosionController.js"></script>
 <script src="controllers/timeController.js"></script>
 <script src="controllers/scoreController.js"></script>
+<script src="controllers/keyboardController.js"></script>
 
 </html>
