--- a/index.html
+++ b/index.html
@@ -18,21 +18,30 @@
     </div>
 
     <div>
-      <input type="radio" id="addition" name="operation" value="addition" checked>
-      <label for="addition">Addition</label>
-      <input type="radio" id="subtraction" name="operation" value="subtraction">
-      <label for="subtraction">Subtraction</label>
-      <input type="radio" id="multiplication" name="operation" value="multiplication">
+      <input type="radio" id="multiplication" name="operation" value="multiplication" checked>
       <label for="multiplication">Multiplication</label>
       <input type="radio" id="division" name="operation" value="division">
       <label for="division">Division</label>
+      <input type="radio" id="addition" name="operation" value="addition">
+      <label for="addition">Addition</label>
+      <input type="radio" id="subtraction" name="operation" value="subtraction">
+      <label for="subtraction">Subtraction</label>
     </div>
 
     <div>
-      <input type="radio" id="keyboard-mode" name="mode" value="keyboard" checked>
-      <label for="keyboard-mode" title="Use the keyboard to answer questions.">Keyboard Mode</label>
-      <input type="radio" id="mouse-mode" name="mode" value="mouse">
+      <input type="radio" id="easy" name="difficulty" value="easy" checked>
+      <label for="easy">Easy</label>
+      <input type="radio" id="medium" name="difficulty" value="medium">
+      <label for="medium">Medium</label>
+      <input type="radio" id="hard" name="difficulty" value="hard">
+      <label for="hard">Hard</label>
+    </div>
+
+    <div>
+      <input type="radio" id="mouse-mode" name="mode" value="mouse" checked>
       <label for="mouse-mode" title="Use the mouse to answer questions.">Mouse Mode</label>
+      <input type="radio" id="keyboard-mode" name="mode" value="keyboard">
+      <label for="keyboard-mode" title="Use the keyboard to answer questions.">Keyboard Mode</label>
     </div>
 
     <!-- <div>
