refactored TimeController to accept context and gameLength parameters, changed explosion length implementation, changed to remove points when exceed canvas

--- a/index.html
+++ b/index.html
@@ -49,6 +49,12 @@
       <input type="number" min="0" max="50" id="term-2-max" name="term-2-max" value="10">
     </div>
 
+    //game length
+    <div>
+      <label for="game-length">Game Length:</label>
+      <input type="number" min="1" id="game-length" name="game-length" value="120">
+    </div>
+
     <div>
       <button id="start-button">Start Game</button>
       <button id="reset-button">Reset Game</button>
